# playground-python

./: .gitignore  README.md  pyproject.toml
1 - Courses/curso-em-video/exercises/: ex013.py
1-courses/1-curso-em-video/exercises/: ex001.py  ex002.py  ex003.py  ex004.py  ex005.py  ex006.py  ex007.py  ex008.py  ex009.py  ex010.py  ex011.py  ex012.py  ex013.py  ex014.py  ex015.py  ex016.py  ex017.py  ex018.py  ex019.py  ex020.py
1-courses/1-curso-em-video/projects/health-check/: main.py
1-courses/1-curso-em-video/projects/users/: main.py
1-courses/1-curso-em-video/scripts/: teste01.py
2 - Concepts/1 - Standard Library/1 - Built-in Functions/: 1 - abs.ipynb
3-patterns/1-creational/: 1-factory-method.ipynb
channels/curso-em-video/exercises/: ex003.py  ex006.py  ex010.py
channels/curso-em-video/projects/users/lib/file/: __init__.py
exercises/: ex001.py  ex002.py  ex004.py  ex005.py  ex007.py  ex008.py  ex012.py  ex014.py  ex015.py  ex016.py  ex017.py  ex018.py  ex020.py
projects/health-check/: main.py
projects/users/: main.py  users-database.txt
projects/users/lib/interface/: __init__.py
