[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = ""
authors = ["Marcos V. Leal <marcosleal.prd@gmail.com>"]

[tool.poetry.scripts]
format = "black --check --diff ."

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
